# figwatch

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  server.py
.github/workflows/: ci.yml  publish.yml
FigWatch.app/Contents/: Info.plist
FigWatch.app/Contents/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/config-3.9-darwin/: Makefile
FigWatch.app/Contents/Frameworks/Python3.framework/Versions/Current/_CodeSignature/: CodeResources
FigWatch.app/Contents/MacOS/: FigWatch  python
FigWatch.app/Contents/Resources/: AppIcon.icns  FigWatch.py  __boot__.py  watcher.py
FigWatch.app/Contents/Resources/handlers/: __init__.py  generic.py  ux.py
FigWatch.app/Contents/Resources/lib/python3.9/handlers/: tone.py  ux.py
FigWatch.app/Contents/Resources/skills/tone/references/: tov-de.md  tov-fr.md  tov-nl.md
FigWatch.app/Contents/Resources/skills/ux/references/: nielsen-heuristics.md  report-template.md
FigWatch.app/Contents/_CodeSignature/: CodeResources
docs/: PLAN-v1.2.md  case-study.docx  case-study.md  docker.md  domain-logic.md
docs/adr/: 001-fail-fast-configuration.md  002-domain-driven-design.md  README.md
figwatch/: __init__.py  ack_updater.py  domain.py  log_context.py  logging_config.py  metrics.py  ports.py  processor.py  queue_stats.py  services.py  skills.py  tracing.py  trigger_config.py  watcher.py  webhook_monitor.py
figwatch/handlers/: __init__.py  generic.py
figwatch/providers/: __init__.py  figma.py
figwatch/providers/ai/: __init__.py  anthropic.py  claude_cli.py  gemini.py  rate_limit.py
figwatch/skills/tone/: skill.md
figwatch/skills/tone/references/: tov-benelux.md
figwatch/skills/ux/: skill.md
macos/: FigWatch.py  setup.py
scripts/: md_to_docx.py
tests/: test_ack_updater.py  test_bounded_set.py  test_domain.py  test_figma_rate_limit.py  test_logging_context.py  test_metrics.py  test_ports.py  test_providers_ai.py  test_providers_figma.py  test_queue_stats.py  test_rate_limit.py  test_server_config.py  test_services.py  test_skills.py  test_token_expired.py  test_trigger_config.py  test_webhook_monitor.py
